network-policies/NP_allow-from-all-namespaces.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  generation: 1
  name: allow-from-all-namespaces
spec:
  ingress:
  - from:
    - namespaceSelector: {}
  podSelector: {}
  policyTypes:
  - Ingress
