network-policies/allow-from-secure-frontend.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  generation: 1
  name: allow-from-secure-frontend
spec:
  ingress:
  - from:
    - namespaceSelector: 
        matchLabels:
          policy: secure-kaffeehaus
  podSelector: {}
  policyTypes:
  - Ingress
