network-policies/deny-all.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: deny-by-default
spec:
  ingress: []
  podSelector: {}
  policyTypes: 
  - Ingress
